[gd_scene load_steps=6 format=3 uid="uid://c4scji1tcoeyr"]

[ext_resource type="Script" path="res://Prototype/TestEnergyOrb.gd" id="1_anlwg"]
[ext_resource type="PackedScene" uid="uid://cd3p0i6kbwcd4" path="res://VFX/Entities/VisualRock.tscn" id="2_tv5ok"]
[ext_resource type="PackedScene" uid="uid://bns7gujnghjmt" path="res://VFX/Effects/EnergyOrbs/EnergyOrbAttractor.tscn" id="3_50xjb"]
[ext_resource type="PackedScene" uid="uid://dkl8yhcu2dmjh" path="res://VFX/Entities/VisualPlayer.tscn" id="4_i1qsp"]
[ext_resource type="PackedScene" uid="uid://dox42qum5t0vk" path="res://Logic/GeneralUtility/OrbitalMovementBody.tscn" id="5_meear"]

[node name="TestEnergyOrb" type="Node3D"]
script = ExtResource("1_anlwg")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.716704, -0.236835, 0.655931, 1.73188e-09, 0.940567, 0.339608, -0.697378, -0.243398, 0.674108, 4.55245, 1.47801, 3.149)

[node name="VisualRock" parent="." instance=ExtResource("2_tv5ok")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.37198, -4.76837e-07, -2.39749)

[node name="EnergyOrbAttractor" parent="VisualRock" instance=ExtResource("3_50xjb")]
transform = Transform3D(0.66876, 0.3103, 0.675629, -0.420893, 0.90711, 0, -0.61287, -0.284368, 0.737242, 0.113213, 0.653455, 0)

[node name="EnergyOrbAttractor2" parent="VisualRock" instance=ExtResource("3_50xjb")]
transform = Transform3D(0.66876, 0.3103, 0.675629, 0.316691, 0.703284, -0.636473, -0.672657, 0.639613, 0.372059, 0.113213, 1.0664, 0.371911)

[node name="EnergyOrbAttractor3" parent="VisualRock" instance=ExtResource("3_50xjb")]
transform = Transform3D(0.317411, -0.288644, -0.903291, 0.189176, 0.952677, -0.237949, 0.929227, -0.0953533, 0.356994, -0.261342, 1.0664, 0.220774)

[node name="VisualPlayer" parent="." instance=ExtResource("4_i1qsp")]
transform = Transform3D(-0.399261, 0, 0.916837, 0, 1, 0, -0.916837, 0, -0.399261, 2.392, 0, 1.988)

[node name="OrbitalMovementBody2" parent="VisualPlayer" instance=ExtResource("5_meear")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.873213, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.435451, 0.900212, 0, -0.900212, 0.435451, 0, 0, 0)
